initial visibility of img fixed

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,9 @@ img {
   padding-bottom: 70px;
 }
 
+#quoteImage {
+  visibility: hidden;
+}
 
 
 
